# CMake-templates

./: CMakeLists.txt  README.md
ExampleLibrary/: CMakeLists.txt
ExampleLibrary/include/: ExampleClass.h
ExampleLibrary/src/: ExampleClass.cpp
ExampleProject/: CMakeLists.txt  main.cpp
ExampleSDL2/: CMakeLists.txt
ExampleSDL2/include/: KeyboardManager.h  SDLScene.h  Texture.h
ExampleSDL2/src/: SDLScene.cpp
ExampleTests/: CMakeLists.txt  main.cpp
